--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "node": "6.5.0",
     "shortid": "^2.2.6"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.10.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
